# TabletopMagnateServer

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: services.py  settings.py
app/controllers/: chat.py  models.py
app/docs/: __init__.py
domain/exceptions/: __init__.py  app_exceptions.py
domain/models/: llm_models.py  openai.py
domain/service/: llm_service.py
