[project]
name = "TabletopMagnatServer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blacksheep[full]>=2.4.5",
    "markupsafe>=3.0.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
]
