[project]
name = "TabletopMagnatServer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blacksheep[full]>=2.4.5",
    "ipython>=9.8.0",
    "langfuse>=3.10.5",
    "markupsafe>=3.0.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
]
